--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -26,7 +26,6 @@
                     <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Reservar.html">RESERVAR</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
@@ -51,7 +50,7 @@
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
                     </p><br>
                     <p class="text--yellow">
-                       <strong id="habitacion1"></strong> Por noche.
+                       <strong id="habitacion1"></strong>$10.000 - Por noche.
                     </p>
                 </div>
                 <div id="carouselExampleControls2" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
@@ -83,7 +82,7 @@
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p><br>
                     <p class="text--yellow">
-                        <strong id="habitacion2"></strong> Por noche.
+                        <strong id="habitacion2"></strong>$15.000 - Por noche.
                      </p>
                 </div>
                 <div id="carouselExampleControls3" data-aos="fade-right" class="carousel slide room__reverse__container__carousel" data-bs-ride="carousel">
@@ -115,7 +114,7 @@
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p><br>
                     <p class="text--yellow">
-                        <strong id="habitacion3"></strong> Por noche. 
+                        <strong id="habitacion3"></strong>$20.000 - Por noche. 
                      </p>
                 </div>
                 <div id="carouselExampleControls4" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
@@ -151,18 +150,6 @@
                 <input class="form1__data" class="text--white" type="number" name="guest" id="guest" required>
                 <button type="submit">RESERVAR</button>
             </form>
-        </section>
-        <section class="contact">
-            <form class="contact__form" action="" method="post">
-                <label class="text--white" for="precio_estandar">Precio hablitacion Doble Estandar</label>
-                <input type="number" name="precio_estandar" id="precioHabitacion1" required>
-                <label class="text--white" for="precio_superior">Precio hablitacion Doble Superior</label>
-                <input type="number" name="precio_superior" id="precioHabitacion2" required>
-                <label class="text--white" for="precio_deluxer">Precio hablitacion Deluxer</label>
-                <input type="number" name="precio_deluxer" id="precioHabitacion3" required>
-                <button type="button" id="btn">MODIFICAR PRECIO</button>
-            </form>
-        </section>
     </main>
 <!-- FIN MAIN DE LA PAGINA -->
 <!-- INICIO DEL FOOTER -->
@@ -190,12 +177,10 @@
                         <li><a class="footer__pages__link footer__main--link" href="./Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
                         <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
-                        <li><a class="footer__pages__link" href="./Reservar.html">RESERVAR</a></li>
                         <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
                 <h3 class="text--yellow">Diseñado por Agustin Pousa</h3> 
-                <h4><a href="./Admin.html">admin</a></h4>
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
